@@ -227,6 +227,9 @@ Library
 - Issue #25924: Avoid unnecessary serialization of getaddrinfo(3) calls on
   OS X versions 10.5 or higher.  Original patch by A. Jesse Jiryu Davis.
 
+- Issue #26406: Avoid unnecessary serialization of getaddrinfo(3) calls on
+  current versions of OpenBSD and NetBSD.  Patch by A. Jesse Jiryu Davis.
+
 Documentation
 -------------
 
